# aura-cli

./: .bandit.yml  .coverage  .dockerignore  .env.example  .env.n8n  .env.n8n.example  .env.save  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  Brain.py  CHANGELOG.md  CLAUDE.md  CODEBASE_CONTEXT.md  CODE_OF_CONDUCT.md  COLLAB_CONTEXT.md  CONTRIBUTING.md  ClosedDevelopmentLoop.py  Dockerfile  Dockerfile.web  EXECUTION_FINAL_REPORT.md  EXECUTION_SUMMARY.md  EXECUTION_TRACKER.md  EvolutionLoop.py  GoalQueue.py  HybridClosedLoop.py  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  LICENSE  MCP_ECOSYSTEM_PLAN.md  Makefile  PARTIAL_COMPLETIONS_FIXED.md  PHASE2_SCHEDULE.md  PR_206_CRITICAL_FIXES.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v0.1.0.md  REPOSITORY_IMPROVEMENTS.md  SECURITY.md  (+43 more)
.agentMemory/: dag-prompt-pattern.json  stdio-transport.json
.aura_forge/: MANIFEST.yaml  README.md
.beads/: .gitignore  config.yaml
.claude/: settings.json
.copilot/: COLLAB_CONTEXT.md  COPILOT.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  labels.yml  lsp.json  pull_request_template.md
.kimi/: COLLAB_CONTEXT.md  KIMI.md
.ralph-state/: history.json  state.json
.serena/: project.yml
agents/: __init__.py  api_validation_agent.py  applicator.py  architectural_audit.py  architecture_validation_agent.py  autogen_agent.py  base.py  brainstorming_bots.py  code_refactor_agent.py  code_search_agent.py  coder.py  codex_agent.py  contract_validator.py  creative_orchestrator.py  critic.py  debugger.py  external_llm_agent.py  fleet_setup.py  health_analyzer.py  hierarchical_coordinator.py  ingest.py  innovation_swarm.py  investigation_agent.py  llm_brainstorming.py  mcp_discovery_agent.py  mcp_health_agent.py  meta_conductor.py  monitoring_agent.py  multi_agent_workflow.py  mutator.py  notification_agent.py  planner.py  prompt_forge.py  prompt_manager.py  python_agent.py  refactor_agent.py  reflector.py  registry.py  root_cause_analysis.py  router.py  (+17 more)
archive/: fix_all_aura_issues.sh  fix_apply_replace_main.sh  fix_aura_json.py  fix_brain_sqlite.py  fix_sqlite_threads.py  patch_main_resilient_apply.sh  patch_main_resilient_apply_v3.sh  test_aura.py
aura/: __init__.py
aura-cli/: main.py
aura_cli/: __init__.py  api_commands.py  api_server.py  cli_main.py  cli_options.py  commands.py  config_validation.py  contract_report.py  dispatch.py  doctor.py  entrypoint.py  error_presenter.py  exit_codes.py  github_integration.py  interactive_shell.py  mcp_cli.py  mcp_client.py  mcp_github_bridge.py  mcp_swarm_bridge.py  migration_assistant.py  options.py  phase2_commands.py  runtime_factory.py  server.py
cli/: cli_main.py  commands.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
core/: __init__.py  adaptive_pipeline.py  agentic_evaluation.py  ai_environment_registry.py  api_validation.py  architecture_validation.py  async_bridge.py  async_optimizer.py  async_orchestrator.py  aura_manager.py  auth.py  autonomous_discovery.py  beads_bridge.py  beads_cli.py  beads_contract.py  cache.py  capability_coordinator.py  capability_manager.py  checkpoint.py  circuit_breaker.py  closed_loop.py  code_analysis.py  code_deduplicator.py  code_rag.py  codex_manager.py  config_manager.py  config_schema.py  config_types.py  container.py  context_budget.py  context_graph.py  context_manager.py  convergence_escape.py  correlation.py  cost_tracker.py  creative_bridge.py  creative_memory.py  credential_store.py  cycle_outcome.py  db_migrations.py  (+135 more)
docker/: nginx.conf  prometheus.yml
docs/: A2A_PROTOCOL.md  ACTIVE_PR_REVIEWER_SUMMARY.md  ACTIVE_SWEEP_CONFIG.example.json  ACTIVE_SWEEP_STATUS.md  AGENT_ROUTING.md  API.md  API_GUIDE.md  AURA_ITERATIVE_WORKFLOW.md  AURA_MULTI_AGENT_WORKFLOW.md  AURA_OPERATOR_PROMPT.md  AURA_SWEEP_TEMPLATES.md  BACKLOG_v1.1.md  CLI_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT_AUTOMATION_GUIDE.md  ENHANCED_FEATURES_INTEGRATION.md  FINAL_DEVELOPMENT_GUIDE.md  GITHUB_TRIAGE_POLICY.md  GOAL_RESUME.md  INCIDENT_RUNBOOK.md  INNOVATION_CATALYST.md  INTEGRATION_MAP.md  JSON_RPC_PROTOCOL.md  LIGHTHOUSE_AUDIT.md  LOCAL_MODELS_ANDROID.md  LOG_AGGREGATION.md  MCP_SERVERS.md  MEMORY_ARCHITECTURE.md  MULTI_AGENT_PROMPTS.md  PHASE3_PLAN.md  PLUGIN_DEVELOPMENT.md  PRD.md  PRD_ASCM_V1.md  PRD_ASCM_V2.md  PR_REVIEWER_SUMMARY_TEMPLATE.md  RELEASE_CHECKLIST.md  ROADMAP_PRD_SERIES.md  SECRET_MANAGEMENT.md  SECURITY.md  (+12 more)
environments/: __init__.py  bootstrap.py  config.py  isolation.py  manager.py
examples/: phase1_demo.py  sample_workflow.yaml
experimental/: README.md
infra/: docker-compose.dev.yml  docker-compose.yml
logs/: rsi_run_output.txt
memory/: .aura_history  SADD_MCP_Discovery_Lessons.json  __init__.py  brain.py  cache_adapter_factory.py  capability_status.json  consolidation.py  controller.py  core_task_handler.pre_live_validation.py.bak  decision_log.jsonl  discovery_seen.json  embedding_provider.py  episodic_memory.py  glossary.md  goal_archive.json  goal_queue.db  goal_queue.json  goal_queue_v2.json  in_flight_goal.json  knowledge_store.py  learning_loop.py  lesson_store.py  lessons.jsonl  local_cache.db  local_cache_adapter.py  memory_manager.py  memory_module.py  momento_adapter.py  momento_brain.py  momento_memory_store.py  neo4j_bridge.py  onnx_embedding_provider.py  procedural_memory.py  project_memory.json  project_sync_hashes.json  redis_cache_adapter.py  semantic_memory.py  skill_weights.json  store.py  task_hierarchy.json  (+4 more)
n8n-workflows/: README.md  WF-0-master-dispatcher.json  WF-1-bug-fix-handler.json  WF-2-feature-handler.json  WF-3-refactor-handler.json  WF-4-security-handler.json  WF-5-docs-handler.json  WF-6-code-gen-pr-push.json  WF-7-sadd-session-manager.json  WF-8-sadd-workstream-monitor.json  workflow1_parallel_skills.js  workflow2_notification_hub.js  workflow3_ai_agent.js  workflow4_goal_orchestrator.js
orchestrator_hub/: __init__.py  hub.py  lifecycle.py  message_bus.py  registry.py  (+1 more)
(+1404 files in other folders)
