[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aura_cli*", "core*", "agents*", "cli*", "conductor*", "task_queue*", "memory*", "tools*"]

[project]
name = "aura-cli"
version = "0.1.0"
description = "Autonomous coding agent with multi-phase orchestration pipeline"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.129.0",
    "uvicorn==0.40.0",
    "requests==2.32.3",
    "pydantic==2.12.5",
    "python-dotenv>=1.0",
    "numpy",
    "gitpython",
    "rich",
    "textblob",
    "networkx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "anyio>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.scripts]
aura = "aura_cli.cli_main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [".git", ".pytest_cache", "__pycache__", "node_modules", "llama.cpp"]

[tool.ruff]
target-version = "py310"
line-length = 120


[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["aura-cli/"]
