[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-cli"
version = "0.1.0"
description = "Autonomous software development platform with multi-agent loop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "requests==2.32.5",
    "pydantic==2.12.5",
    "python-dotenv",
    "numpy",
    "gitpython",
    "rich",
    "textblob",
    "networkx",
    "typer>=0.12.0",
    "pyautogen>=0.2.0,<0.11",
    "openapi_spec_validator>=0.7.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "anyio>=4.0",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.0",
]
github = [
    "PyGithub>=2.1.0",
]
webui = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "redis>=5.0.0",
]

[project.scripts]
aura = "aura_cli.cli_main:main"

[project.urls]
Homepage = "https://github.com/asshat1981ar/aura-cli"
Repository = "https://github.com/asshat1981ar/aura-cli"
Issues = "https://github.com/asshat1981ar/aura-cli/issues"

[tool.setuptools.packages.find]
include = ["aura_cli*", "core*", "agents*", "memory*", "tools*", "task_queue*"]
exclude = ["tests*", "scripts*", "archive*", "docs*", "plans*", "conductor*", "projects*"]

[tool.pytest.ini_options]
pythonpath = [".", "experimental"]
testpaths = ["."]
addopts = [
    "--strict-markers",
    "-q",
]

[tool.coverage.run]
source = ["aura_cli", "core", "agents", "memory"]
omit = [
    "*/tests/*",
    "*/test_*",
    "scripts/*",
    "archive/*",
]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.bandit]
exclude_dirs = ["tests", "archive", "scripts"]
skips = ["B101"]  # assert used in tests

[tool.ruff]
extend = "ruff.toml"
