[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-cli"
version = "1.0.0"
description = "Autonomous software development platform with multi-agent loop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.44.0",
    "requests>=2.33.0",
    "pydantic==2.12.5",
    "python-dotenv",
    "numpy",
    "gitpython",
    "rich",
    "textblob",
    "networkx",
    # Explicit lower bounds for CVE remediation
    "Jinja2>=3.1.6",
    "tornado>=6.5.5",
    "future>=0.18.3",
    "typer>=0.12.0",
    "pyautogen>=0.2.0,<0.11",
    "openapi_spec_validator>=0.7.0",
    "jsonschema>=4.0.0",
    # Security Issue #427: Secure credential storage
    "keyring>=24.0.0",
    "cryptography>=46.0.7",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "anyio>=4.0",
    "ruff>=0.4",
    "bandit>=1.8",
    "pip-audit>=2.7",
    "pre-commit>=3.0",
    "hypothesis>=6.100.0",
]
github = [
    "PyGithub>=2.1.0",
]
webui = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "redis>=5.0.0",
]
onnx = [
    "onnxruntime-mobile>=1.17.0",
    "huggingface_hub>=1.10.2",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
]

[project.scripts]
aura = "aura_cli.cli_main:main"

[project.urls]
Homepage = "https://github.com/asshat1981ar/aura-cli"
Repository = "https://github.com/asshat1981ar/aura-cli"
Issues = "https://github.com/asshat1981ar/aura-cli/issues"

[tool.setuptools.packages.find]
include = ["aura_cli*", "core*", "agents*", "memory*", "tools*", "task_queue*", "maple*", "services*"]
exclude = ["tests*", "scripts*", "archive*", "docs*", "plans*", "conductor*", "projects*"]

[tool.pytest.ini_options]
pythonpath = [".", "experimental"]
testpaths = ["."]
asyncio_mode = "auto"
timeout = 30
timeout_method = "thread"
addopts = [
    "--strict-markers",
    "-q",
    "--cov=aura_cli",
    "--cov=core",
    "--cov=agents",
    "--cov=memory",
    "--cov-report=term-missing",
    # TODO: Raise to 80% once all critical modules have test coverage:
    # "--cov-fail-under=80",
]
markers = [
    "unit: marks pure unit tests (no I/O, no external services)",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async",
    "slow: marks tests as slow (>10s expected)",
    "e2e: marks end-to-end tests (full pipeline)",
    "security: marks security-focused tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:jose.*",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
branch = true
source = ["aura_cli", "core", "agents", "memory", "services"]
omit = [
    "tests/*",
    "*/migrations/*",
    "setup.py",
    "__pycache__/*",
    "*/test_*",
    "scripts/*",
    "archive/*",
]

[tool.coverage.report]
fail_under = 38
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
    "def __repr__",
    "pass",
    "except ImportError",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts", "docs", ".venv", "web-ui"]
skips = ["B101", "B601"]  # B101=assert, B601=paramiko (not used here)

[tool.ruff]
extend = "ruff.toml"
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
